# Real_Time_Order_Book_Analysis

./: .gitignore  CMakeLists.txt  README.md
data/: orderbook_log.csv
include/: csv_writer.hpp  orderbook.hpp  websocket_client.hpp
scripts/: run.sh
src/: csv_writer.cpp  main.cpp  orderbook.cpp  websocket_client.cpp
